flike_kingshard-1.4/y.output

state 0
	$accept: .any_command $end 

	SELECT  shift 18
	INSERT  shift 19
	UPDATE  shift 20
	DELETE  shift 21
	SET  shift 22
	USE  shift 33
	BEGIN  shift 27
	START  shift 28
	COMMIT  shift 29
	ROLLBACK  shift 30
	REPLACE  shift 31
	ADMIN  shift 32
	CREATE  shift 23
	ALTER  shift 24
	DROP  shift 26
	RENAME  shift 25
	.  error

	any_command  goto 1
	command  goto 2
	select_statement  goto 3
	insert_statement  goto 4
	update_statement  goto 5
	delete_statement  goto 6
	set_statement  goto 7
	create_statement  goto 8
	alter_statement  goto 9
	rename_statement  goto 10
	drop_statement  goto 11
	begin_statement  goto 12
	commit_statement  goto 13
	rollback_statement  goto 14
	replace_statement  goto 15
	admin_statement  goto 16
	use_statement  goto 17

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  command.    (1)

	.  reduce 1 (src line 180)


state 3
	command:  select_statement.    (2)
	select_statement:  select_statement.union_op select_statement 

	UNION  shift 35
	MINUS  shift 36
	EXCEPT  shift 37
	INTERSECT  shift 38
	.  reduce 2 (src line 186)

	union_op  goto 34

state 4
	command:  insert_statement.    (3)

	.  reduce 3 (src line 191)


state 5
	command:  update_statement.    (4)

	.  reduce 4 (src line 192)


state 6
	command:  delete_statement.    (5)

	.  reduce 5 (src line 193)


state 7
	command:  set_statement.    (6)

	.  reduce 6 (src line 194)


state 8
	command:  create_statement.    (7)

	.  reduce 7 (src line 195)


state 9
	command:  alter_statement.    (8)

	.  reduce 8 (src line 196)


state 10
	command:  rename_statement.    (9)

	.  reduce 9 (src line 197)


state 11
	command:  drop_statement.    (10)

	.  reduce 10 (src line 198)


state 12
	command:  begin_statement.    (11)

	.  reduce 11 (src line 199)


state 13
	command:  commit_statement.    (12)

	.  reduce 12 (src line 200)


state 14
	command:  rollback_statement.    (13)

	.  reduce 13 (src line 201)


state 15
	command:  replace_statement.    (14)

	.  reduce 14 (src line 202)


state 16
	command:  admin_statement.    (15)

	.  reduce 15 (src line 203)


state 17
	command:  use_statement.    (16)

	.  reduce 16 (src line 204)


state 18
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list 
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	$$46: .    (46)

	.  reduce 46 (src line 380)

	comment_opt  goto 39
	$$46  goto 40

state 19
	insert_statement:  INSERT.comment_opt ignore_opt INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT.comment_opt ignore_opt INTO dml_table_expression SET update_list on_dup_opt 
	$$46: .    (46)

	.  reduce 46 (src line 380)

	comment_opt  goto 41
	$$46  goto 40

state 20
	update_statement:  UPDATE.comment_opt dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 
	$$46: .    (46)

	.  reduce 46 (src line 380)

	comment_opt  goto 42
	$$46  goto 40

state 21
	delete_statement:  DELETE.comment_opt FROM dml_table_expression where_expression_opt order_by_opt limit_opt 
	$$46: .    (46)

	.  reduce 46 (src line 380)

	comment_opt  goto 43
	$$46  goto 40

state 22
	set_statement:  SET.comment_opt update_list 
	set_statement:  SET.comment_opt NAMES value_expression 
	set_statement:  SET.comment_opt NAMES value_expression COLLATE value_expression 
	$$46: .    (46)

	.  reduce 46 (src line 380)

	comment_opt  goto 44
	$$46  goto 40

state 23
	create_statement:  CREATE.TABLE not_exists_opt ID force_eof 
	create_statement:  CREATE.constraint_opt INDEX sql_id using_opt ON ID force_eof 
	create_statement:  CREATE.VIEW sql_id force_eof 
	constraint_opt: .    (206)

	TABLE  shift 45
	VIEW  shift 47
	UNIQUE  shift 48
	.  reduce 206 (src line 1096)

	constraint_opt  goto 46

state 24
	alter_statement:  ALTER.ignore_opt TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER.ignore_opt TABLE ID RENAME to_opt ID 
	alter_statement:  ALTER.VIEW sql_id force_eof 
	ignore_opt: .    (197)

	VIEW  shift 50
	IGNORE  shift 51
	.  reduce 197 (src line 1074)

	ignore_opt  goto 49

state 25
	rename_statement:  RENAME.TABLE ID TO ID 

	TABLE  shift 52
	.  error


state 26
	drop_statement:  DROP.TABLE exists_opt ID 
	drop_statement:  DROP.INDEX sql_id ON ID 
	drop_statement:  DROP.VIEW exists_opt sql_id force_eof 

	TABLE  shift 53
	INDEX  shift 54
	VIEW  shift 55
	.  error


state 27
	begin_statement:  BEGIN.    (29)

	.  reduce 29 (src line 290)


state 28
	begin_statement:  START.TRANSACTION 

	TRANSACTION  shift 56
	.  error


state 29
	commit_statement:  COMMIT.    (31)

	.  reduce 31 (src line 301)


state 30
	rollback_statement:  ROLLBACK.    (32)

	.  reduce 32 (src line 307)


state 31
	replace_statement:  REPLACE.comment_opt INTO dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE.comment_opt INTO dml_table_expression SET update_list 
	$$46: .    (46)

	.  reduce 46 (src line 380)

	comment_opt  goto 57
	$$46  goto 40

state 32
	admin_statement:  ADMIN.dml_table_expression column_list_opt row_list 
	admin_statement:  ADMIN.HELP 

	ID  shift 60
	HELP  shift 59
	.  error

	dml_table_expression  goto 58

state 33
	use_statement:  USE.sql_id 

	ID  shift 62
	.  error

	sql_id  goto 61

state 34
	select_statement:  select_statement union_op.select_statement 

	SELECT  shift 18
	.  error

	select_statement  goto 63

state 35
	union_op:  UNION.    (50)
	union_op:  UNION.ALL 

	ALL  shift 64
	.  reduce 50 (src line 399)


state 36
	union_op:  MINUS.    (52)

	.  reduce 52 (src line 408)


state 37
	union_op:  EXCEPT.    (53)

	.  reduce 53 (src line 412)


state 38
	union_op:  INTERSECT.    (54)

	.  reduce 54 (src line 416)


state 39
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list 
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	distinct_opt: .    (55)

	DISTINCT  shift 66
	.  reduce 55 (src line 421)

	distinct_opt  goto 65

state 40
	comment_opt:  $$46.comment_list 
	comment_list: .    (48)

	.  reduce 48 (src line 390)

	comment_list  goto 67

state 41
	insert_statement:  INSERT comment_opt.ignore_opt INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt.ignore_opt INTO dml_table_expression SET update_list on_dup_opt 
	ignore_opt: .    (197)

	IGNORE  shift 51
	.  reduce 197 (src line 1074)

	ignore_opt  goto 68

state 42
	update_statement:  UPDATE comment_opt.dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 60
	.  error

	dml_table_expression  goto 69

state 43
	delete_statement:  DELETE comment_opt.FROM dml_table_expression where_expression_opt order_by_opt limit_opt 

	FROM  shift 70
	.  error


state 44
	set_statement:  SET comment_opt.update_list 
	set_statement:  SET comment_opt.NAMES value_expression 
	set_statement:  SET comment_opt.NAMES value_expression COLLATE value_expression 

	ID  shift 76
	NAMES  shift 72
	.  error

	column_name  goto 74
	update_list  goto 71
	update_expression  goto 73
	sql_id  goto 75

state 45
	create_statement:  CREATE TABLE.not_exists_opt ID force_eof 
	not_exists_opt: .    (195)

	IF  shift 78
	.  reduce 195 (src line 1069)

	not_exists_opt  goto 77

state 46
	create_statement:  CREATE constraint_opt.INDEX sql_id using_opt ON ID force_eof 

	INDEX  shift 79
	.  error


state 47
	create_statement:  CREATE VIEW.sql_id force_eof 

	ID  shift 62
	.  error

	sql_id  goto 80

state 48
	constraint_opt:  UNIQUE.    (207)

	.  reduce 207 (src line 1098)


state 49
	alter_statement:  ALTER ignore_opt.TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt.TABLE ID RENAME to_opt ID 

	TABLE  shift 81
	.  error


state 50
	alter_statement:  ALTER VIEW.sql_id force_eof 

	ID  shift 62
	.  error

	sql_id  goto 82

state 51
	ignore_opt:  IGNORE.    (198)

	.  reduce 198 (src line 1076)


state 52
	rename_statement:  RENAME TABLE.ID TO ID 

	ID  shift 83
	.  error


state 53
	drop_statement:  DROP TABLE.exists_opt ID 
	exists_opt: .    (193)

	IF  shift 85
	.  reduce 193 (src line 1064)

	exists_opt  goto 84

state 54
	drop_statement:  DROP INDEX.sql_id ON ID 

	ID  shift 62
	.  error

	sql_id  goto 86

state 55
	drop_statement:  DROP VIEW.exists_opt sql_id force_eof 
	exists_opt: .    (193)

	IF  shift 85
	.  reduce 193 (src line 1064)

	exists_opt  goto 87

state 56
	begin_statement:  START TRANSACTION.    (30)

	.  reduce 30 (src line 295)


state 57
	replace_statement:  REPLACE comment_opt.INTO dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE comment_opt.INTO dml_table_expression SET update_list 

	INTO  shift 88
	.  error


state 58
	admin_statement:  ADMIN dml_table_expression.column_list_opt row_list 
	column_list_opt: .    (184)

	'('  shift 90
	.  reduce 184 (src line 1020)

	column_list_opt  goto 89

state 59
	admin_statement:  ADMIN HELP.    (34)

	.  reduce 34 (src line 318)


state 60
	dml_table_expression:  ID.    (88)
	dml_table_expression:  ID.'.' ID 

	'.'  shift 91
	.  reduce 88 (src line 570)


state 61
	use_statement:  USE sql_id.    (35)

	.  reduce 35 (src line 323)


state 62
	sql_id:  ID.    (210)

	.  reduce 210 (src line 1106)


state 63
	select_statement:  select_statement.union_op select_statement 
	select_statement:  select_statement union_op select_statement.    (19)

	.  reduce 19 (src line 215)

	union_op  goto 34

state 64
	union_op:  UNION ALL.    (51)

	.  reduce 51 (src line 404)


state 65
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list 
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	EXISTS  shift 109
	NULL  shift 113
	VALUES  shift 119
	ID  shift 96
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 101
	'~'  shift 117
	NOT  shift 100
	'+'  shift 115
	'-'  shift 116
	'*'  shift 94
	CASE  shift 120
	IF  shift 118
	.  error

	select_expression_list  goto 92
	select_expression  goto 93
	expression  goto 95
	boolean_expression  goto 97
	condition  goto 99
	value  goto 102
	value_expression  goto 98
	tuple  goto 104
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	sql_id  goto 106

state 66
	distinct_opt:  DISTINCT.    (56)

	.  reduce 56 (src line 425)


state 67
	comment_opt:  $$46 comment_list.    (47)
	comment_list:  comment_list.COMMENT 

	COMMENT  shift 121
	.  reduce 47 (src line 384)


state 68
	insert_statement:  INSERT comment_opt ignore_opt.INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt ignore_opt.INTO dml_table_expression SET update_list on_dup_opt 

	INTO  shift 122
	.  error


state 69
	update_statement:  UPDATE comment_opt dml_table_expression.SET update_list where_expression_opt order_by_opt limit_opt 

	SET  shift 123
	.  error


state 70
	delete_statement:  DELETE comment_opt FROM.dml_table_expression where_expression_opt order_by_opt limit_opt 

	ID  shift 60
	.  error

	dml_table_expression  goto 124

state 71
	set_statement:  SET comment_opt update_list.    (26)
	update_list:  update_list.',' update_expression 

	','  shift 125
	.  reduce 26 (src line 266)


state 72
	set_statement:  SET comment_opt NAMES.value_expression 
	set_statement:  SET comment_opt NAMES.value_expression COLLATE value_expression 

	NULL  shift 113
	VALUES  shift 119
	ID  shift 76
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 127
	'~'  shift 117
	'+'  shift 115
	'-'  shift 116
	CASE  shift 120
	IF  shift 118
	.  error

	value  goto 102
	value_expression  goto 126
	tuple  goto 104
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	sql_id  goto 106

state 73
	update_list:  update_expression.    (190)

	.  reduce 190 (src line 1048)


state 74
	update_expression:  column_name.'=' value_expression 

	'='  shift 128
	.  error


state 75
	column_name:  sql_id.    (159)

	.  reduce 159 (src line 898)


state 76
	column_name:  ID.'.' sql_id 
	sql_id:  ID.    (210)

	'.'  shift 129
	.  reduce 210 (src line 1106)


state 77
	create_statement:  CREATE TABLE not_exists_opt.ID force_eof 

	ID  shift 130
	.  error


state 78
	not_exists_opt:  IF.NOT EXISTS 

	NOT  shift 131
	.  error


state 79
	create_statement:  CREATE constraint_opt INDEX.sql_id using_opt ON ID force_eof 

	ID  shift 62
	.  error

	sql_id  goto 132

state 80
	create_statement:  CREATE VIEW sql_id.force_eof 
	force_eof: .    (211)

	.  reduce 211 (src line 1112)

	force_eof  goto 133

state 81
	alter_statement:  ALTER ignore_opt TABLE.ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE.ID RENAME to_opt ID 

	ID  shift 134
	.  error


state 82
	alter_statement:  ALTER VIEW sql_id.force_eof 
	force_eof: .    (211)

	.  reduce 211 (src line 1112)

	force_eof  goto 135

state 83
	rename_statement:  RENAME TABLE ID.TO ID 

	TO  shift 136
	.  error


state 84
	drop_statement:  DROP TABLE exists_opt.ID 

	ID  shift 137
	.  error


state 85
	exists_opt:  IF.EXISTS 

	EXISTS  shift 138
	.  error


state 86
	drop_statement:  DROP INDEX sql_id.ON ID 

	ON  shift 139
	.  error


state 87
	drop_statement:  DROP VIEW exists_opt.sql_id force_eof 

	ID  shift 62
	.  error

	sql_id  goto 140

state 88
	replace_statement:  REPLACE comment_opt INTO.dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE comment_opt INTO.dml_table_expression SET update_list 

	ID  shift 60
	.  error

	dml_table_expression  goto 141

state 89
	admin_statement:  ADMIN dml_table_expression column_list_opt.row_list 

	SELECT  shift 18
	VALUES  shift 143
	.  error

	select_statement  goto 144
	row_list  goto 142

state 90
	column_list_opt:  '('.column_list ')' 

	ID  shift 76
	.  error

	column_name  goto 146
	column_list  goto 145
	sql_id  goto 75

state 91
	dml_table_expression:  ID '.'.ID 

	ID  shift 147
	.  error


state 92
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.    (17)
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	select_expression_list:  select_expression_list.',' select_expression 

	FROM  shift 148
	','  shift 149
	.  reduce 17 (src line 206)


state 93
	select_expression_list:  select_expression.    (57)

	.  reduce 57 (src line 430)


state 94
	select_expression:  '*'.    (59)

	.  reduce 59 (src line 440)


state 95
	select_expression:  expression.as_lower_opt 
	as_lower_opt: .    (64)

	AS  shift 152
	ID  shift 62
	.  reduce 64 (src line 464)

	as_lower_opt  goto 150
	sql_id  goto 151

state 96
	select_expression:  ID.'.' '*' 
	column_name:  ID.'.' sql_id 
	sql_id:  ID.    (210)

	'.'  shift 153
	.  reduce 210 (src line 1106)


state 97
	expression:  boolean_expression.    (62)
	boolean_expression:  boolean_expression.AND boolean_expression 
	boolean_expression:  boolean_expression.OR boolean_expression 

	AND  shift 154
	OR  shift 155
	.  reduce 62 (src line 454)


state 98
	expression:  value_expression.    (63)
	condition:  value_expression.compare value_expression 
	condition:  value_expression.IN tuple 
	condition:  value_expression.NOT IN tuple 
	condition:  value_expression.LIKE value_expression 
	condition:  value_expression.NOT LIKE value_expression 
	condition:  value_expression.BETWEEN value_expression AND value_expression 
	condition:  value_expression.NOT BETWEEN value_expression AND value_expression 
	condition:  value_expression.IS NULL 
	condition:  value_expression.IS NOT NULL 
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 

	IN  shift 157
	IS  shift 161
	LIKE  shift 159
	BETWEEN  shift 160
	LE  shift 173
	GE  shift 174
	NE  shift 175
	NULL_SAFE_EQUAL  shift 176
	'='  shift 170
	'<'  shift 171
	'>'  shift 172
	NOT  shift 158
	'&'  shift 162
	'|'  shift 163
	'^'  shift 164
	'+'  shift 165
	'-'  shift 166
	'*'  shift 167
	'/'  shift 168
	'%'  shift 169
	.  reduce 63 (src line 459)

	compare  goto 156

state 99
	boolean_expression:  condition.    (98)

	.  reduce 98 (src line 616)


state 100
	boolean_expression:  NOT.boolean_expression 

	EXISTS  shift 109
	NULL  shift 113
	VALUES  shift 119
	ID  shift 76
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 101
	'~'  shift 117
	NOT  shift 100
	'+'  shift 115
	'-'  shift 116
	CASE  shift 120
	IF  shift 118
	.  error

	boolean_expression  goto 177
	condition  goto 99
	value  goto 102
	value_expression  goto 178
	tuple  goto 104
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	sql_id  goto 106

state 101
	boolean_expression:  '('.boolean_expression ')' 
	tuple:  '('.value_expression_list ')' 
	subquery:  '('.select_statement ')' 

	SELECT  shift 18
	EXISTS  shift 109
	NULL  shift 113
	VALUES  shift 119
	ID  shift 76
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 101
	'~'  shift 117
	NOT  shift 100
	'+'  shift 115
	'-'  shift 116
	CASE  shift 120
	IF  shift 118
	.  error

	select_statement  goto 181
	boolean_expression  goto 179
	condition  goto 99
	value  goto 102
	value_expression  goto 182
	tuple  goto 104
	value_expression_list  goto 180
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	sql_id  goto 106

state 102
	value_expression:  value.    (129)

	.  reduce 129 (src line 753)


state 103
	value_expression:  column_name.    (130)

	.  reduce 130 (src line 758)


state 104
	value_expression:  tuple.    (131)

	.  reduce 131 (src line 762)


state 105
	value_expression:  unary_operator.value_expression 

	NULL  shift 113
	VALUES  shift 119
	ID  shift 76
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 127
	'~'  shift 117
	'+'  shift 115
	'-'  shift 116
	CASE  shift 120
	IF  shift 118
	.  error

	value  goto 102
	value_expression  goto 183
	tuple  goto 104
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	sql_id  goto 106

state 106
	value_expression:  sql_id.'(' ')' 
	value_expression:  sql_id.'(' select_expression_list ')' 
	value_expression:  sql_id.'(' DISTINCT select_expression_list ')' 
	column_name:  sql_id.    (159)

	'('  shift 184
	.  reduce 159 (src line 898)


state 107
	value_expression:  keyword_as_func.'(' select_expression_list ')' 

	'('  shift 185
	.  error


state 108
	value_expression:  case_expression.    (145)

	.  reduce 145 (src line 829)


state 109
	condition:  EXISTS.subquery 

	'('  shift 187
	.  error

	subquery  goto 186

state 110
	value:  STRING.    (161)

	.  reduce 161 (src line 908)


state 111
	value:  NUMBER.    (162)

	.  reduce 162 (src line 913)


state 112
	value:  VALUE_ARG.    (163)

	.  reduce 163 (src line 917)


state 113
	value:  NULL.    (164)

	.  reduce 164 (src line 921)


state 114
	tuple:  subquery.    (125)

	.  reduce 125 (src line 732)


state 115
	unary_operator:  '+'.    (148)

	.  reduce 148 (src line 844)


state 116
	unary_operator:  '-'.    (149)

	.  reduce 149 (src line 849)


state 117
	unary_operator:  '~'.    (150)

	.  reduce 150 (src line 853)


state 118
	keyword_as_func:  IF.    (146)

	.  reduce 146 (src line 834)


state 119
	keyword_as_func:  VALUES.    (147)

	.  reduce 147 (src line 839)


state 120
	case_expression:  CASE.value_expression_opt when_expression_list else_expression_opt END 
	value_expression_opt: .    (152)

	NULL  shift 113
	VALUES  shift 119
	ID  shift 76
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 127
	'~'  shift 117
	'+'  shift 115
	'-'  shift 116
	CASE  shift 120
	IF  shift 118
	.  reduce 152 (src line 864)

	value  goto 102
	value_expression  goto 189
	tuple  goto 104
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	value_expression_opt  goto 188
	sql_id  goto 106

state 121
	comment_list:  comment_list COMMENT.    (49)

	.  reduce 49 (src line 394)


state 122
	insert_statement:  INSERT comment_opt ignore_opt INTO.dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt ignore_opt INTO.dml_table_expression SET update_list on_dup_opt 

	ID  shift 60
	.  error

	dml_table_expression  goto 190

state 123
	update_statement:  UPDATE comment_opt dml_table_expression SET.update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 76
	.  error

	column_name  goto 74
	update_list  goto 191
	update_expression  goto 73
	sql_id  goto 75

state 124
	delete_statement:  DELETE comment_opt FROM dml_table_expression.where_expression_opt order_by_opt limit_opt 
	where_expression_opt: .    (96)

	WHERE  shift 193
	.  reduce 96 (src line 607)

	where_expression_opt  goto 192

state 125
	update_list:  update_list ','.update_expression 

	ID  shift 76
	.  error

	column_name  goto 74
	update_expression  goto 194
	sql_id  goto 75

state 126
	set_statement:  SET comment_opt NAMES value_expression.    (27)
	set_statement:  SET comment_opt NAMES value_expression.COLLATE value_expression 
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 

	'&'  shift 162
	'|'  shift 163
	'^'  shift 164
	'+'  shift 165
	'-'  shift 166
	'*'  shift 167
	'/'  shift 168
	'%'  shift 169
	COLLATE  shift 195
	.  reduce 27 (src line 271)


state 127
	tuple:  '('.value_expression_list ')' 
	subquery:  '('.select_statement ')' 

	SELECT  shift 18
	NULL  shift 113
	VALUES  shift 119
	ID  shift 76
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 127
	'~'  shift 117
	'+'  shift 115
	'-'  shift 116
	CASE  shift 120
	IF  shift 118
	.  error

	select_statement  goto 181
	value  goto 102
	value_expression  goto 196
	tuple  goto 104
	value_expression_list  goto 180
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	sql_id  goto 106

state 128
	update_expression:  column_name '='.value_expression 

	NULL  shift 113
	VALUES  shift 119
	ID  shift 76
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 127
	'~'  shift 117
	'+'  shift 115
	'-'  shift 116
	CASE  shift 120
	IF  shift 118
	.  error

	value  goto 102
	value_expression  goto 197
	tuple  goto 104
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	sql_id  goto 106

state 129
	column_name:  ID '.'.sql_id 

	ID  shift 62
	.  error

	sql_id  goto 198

state 130
	create_statement:  CREATE TABLE not_exists_opt ID.force_eof 
	force_eof: .    (211)

	.  reduce 211 (src line 1112)

	force_eof  goto 199

state 131
	not_exists_opt:  IF NOT.EXISTS 

	EXISTS  shift 200
	.  error


state 132
	create_statement:  CREATE constraint_opt INDEX sql_id.using_opt ON ID force_eof 
	using_opt: .    (208)

	USING  shift 202
	.  reduce 208 (src line 1101)

	using_opt  goto 201

state 133
	create_statement:  CREATE VIEW sql_id force_eof.    (38)

	.  reduce 38 (src line 339)


state 134
	alter_statement:  ALTER ignore_opt TABLE ID.non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE ID.RENAME to_opt ID 

	ORDER  shift 208
	DEFAULT  shift 206
	ID  shift 209
	ALTER  shift 205
	DROP  shift 207
	RENAME  shift 204
	.  error

	non_rename_operation  goto 203

state 135
	alter_statement:  ALTER VIEW sql_id force_eof.    (41)

	.  reduce 41 (src line 354)


state 136
	rename_statement:  RENAME TABLE ID TO.ID 

	ID  shift 210
	.  error


state 137
	drop_statement:  DROP TABLE exists_opt ID.    (43)

	.  reduce 43 (src line 365)


state 138
	exists_opt:  IF EXISTS.    (194)

	.  reduce 194 (src line 1066)


state 139
	drop_statement:  DROP INDEX sql_id ON.ID 

	ID  shift 211
	.  error


state 140
	drop_statement:  DROP VIEW exists_opt sql_id.force_eof 
	force_eof: .    (211)

	.  reduce 211 (src line 1112)

	force_eof  goto 212

state 141
	replace_statement:  REPLACE comment_opt INTO dml_table_expression.column_list_opt row_list 
	replace_statement:  REPLACE comment_opt INTO dml_table_expression.SET update_list 
	column_list_opt: .    (184)

	SET  shift 214
	'('  shift 90
	.  reduce 184 (src line 1020)

	column_list_opt  goto 213

state 142
	admin_statement:  ADMIN dml_table_expression column_list_opt row_list.    (33)

	.  reduce 33 (src line 313)


state 143
	row_list:  VALUES.tuple_list 

	'('  shift 127
	.  error

	tuple  goto 216
	tuple_list  goto 215
	subquery  goto 114

state 144
	select_statement:  select_statement.union_op select_statement 
	row_list:  select_statement.    (121)

	UNION  shift 35
	MINUS  shift 36
	EXCEPT  shift 37
	INTERSECT  shift 38
	.  reduce 121 (src line 712)

	union_op  goto 34

state 145
	column_list_opt:  '(' column_list.')' 
	column_list:  column_list.',' column_name 

	','  shift 218
	')'  shift 217
	.  error


state 146
	column_list:  column_name.    (186)

	.  reduce 186 (src line 1029)


state 147
	dml_table_expression:  ID '.' ID.    (89)

	.  reduce 89 (src line 575)


state 148
	select_statement:  SELECT comment_opt distinct_opt select_expression_list FROM.table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	ID  shift 223
	'('  shift 222
	.  error

	table_expression_list  goto 219
	table_expression  goto 220
	simple_table_expression  goto 221
	subquery  goto 224

state 149
	select_expression_list:  select_expression_list ','.select_expression 

	EXISTS  shift 109
	NULL  shift 113
	VALUES  shift 119
	ID  shift 96
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 101
	'~'  shift 117
	NOT  shift 100
	'+'  shift 115
	'-'  shift 116
	'*'  shift 94
	CASE  shift 120
	IF  shift 118
	.  error

	select_expression  goto 225
	expression  goto 95
	boolean_expression  goto 97
	condition  goto 99
	value  goto 102
	value_expression  goto 98
	tuple  goto 104
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	sql_id  goto 106

state 150
	select_expression:  expression as_lower_opt.    (60)

	.  reduce 60 (src line 445)


state 151
	as_lower_opt:  sql_id.    (65)

	.  reduce 65 (src line 468)


state 152
	as_lower_opt:  AS.sql_id 

	ID  shift 62
	.  error

	sql_id  goto 226

state 153
	select_expression:  ID '.'.'*' 
	column_name:  ID '.'.sql_id 

	ID  shift 62
	'*'  shift 227
	.  error

	sql_id  goto 198

state 154
	boolean_expression:  boolean_expression AND.boolean_expression 

	EXISTS  shift 109
	NULL  shift 113
	VALUES  shift 119
	ID  shift 76
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 101
	'~'  shift 117
	NOT  shift 100
	'+'  shift 115
	'-'  shift 116
	CASE  shift 120
	IF  shift 118
	.  error

	boolean_expression  goto 228
	condition  goto 99
	value  goto 102
	value_expression  goto 178
	tuple  goto 104
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	sql_id  goto 106

state 155
	boolean_expression:  boolean_expression OR.boolean_expression 

	EXISTS  shift 109
	NULL  shift 113
	VALUES  shift 119
	ID  shift 76
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 101
	'~'  shift 117
	NOT  shift 100
	'+'  shift 115
	'-'  shift 116
	CASE  shift 120
	IF  shift 118
	.  error

	boolean_expression  goto 229
	condition  goto 99
	value  goto 102
	value_expression  goto 178
	tuple  goto 104
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	sql_id  goto 106

state 156
	condition:  value_expression compare.value_expression 

	NULL  shift 113
	VALUES  shift 119
	ID  shift 76
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 127
	'~'  shift 117
	'+'  shift 115
	'-'  shift 116
	CASE  shift 120
	IF  shift 118
	.  error

	value  goto 102
	value_expression  goto 230
	tuple  goto 104
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	sql_id  goto 106

state 157
	condition:  value_expression IN.tuple 

	'('  shift 127
	.  error

	tuple  goto 231
	subquery  goto 114

state 158
	condition:  value_expression NOT.IN tuple 
	condition:  value_expression NOT.LIKE value_expression 
	condition:  value_expression NOT.BETWEEN value_expression AND value_expression 

	IN  shift 232
	LIKE  shift 233
	BETWEEN  shift 234
	.  error


state 159
	condition:  value_expression LIKE.value_expression 

	NULL  shift 113
	VALUES  shift 119
	ID  shift 76
	STRING  shift 110
	NUMBER  shift 111
	VALUE_ARG  shift 112
	'('  shift 127
	'~'  shift 117
	'+'  shift 115
	'-'  shift 116
	CASE  shift 120
	IF  shift 118
	.  error

	value  goto 102
	value_expression  goto 235
	tuple  goto 104
	keyword_as_func  goto 107
	subquery  goto 114
	unary_operator  goto 105
	column_name  goto 103
	case_expression  goto 108
	sql_id  goto 106

state 160
	condition:  value_expression BETWEEN.value_expression AND value_expression 
